добавил примеры для copy() from Kotlin and analog for Records Java