@@ -1,4 +1,4 @@
-package tv.codealong.tutorials.various.yandex.test6_3_real;
+package tv.codealong.tutorials.various.yandex.test6_4_real_java_with_record;
 
 import java.math.BigDecimal;
 import java.util.List;
@@ -53,7 +53,7 @@ public class LoyaltyService {
      */
     public ShoppingCart applyDiscount(String customerId, ShoppingCart shoppingCart) {
         // валидация
-        if (!customerId.equals(shoppingCart.getCustomerId())) {
+        if (!customerId.equals(shoppingCart.customerId())) {
             throw new IllegalArgumentException("Customer ID does not match shopping cart customer ID. Provided: customerId=" + customerId);
         }
 
@@ -61,26 +61,36 @@ public class LoyaltyService {
                 .orElse(new Discount(customerId, 0)); // Если скидки нет, применяем 0%
 
         // ВАЖНО: создаем новый список с НОВЫМИ объектами Purchase
-        List<Purchase> discountedPurchases = shoppingCart.getPurchases().stream()
+        List<Purchase> discountedPurchases = shoppingCart.purchases().stream()
                 .map(purchase -> applyDiscountToPurchase(purchase, discount))
-                .collect(Collectors.toList());
+                .toList();
 
-        // Возвращаем НОВЫЙ объект ShoppingCart
-        return new ShoppingCart(customerId, discountedPurchases);
+        // Возвращаем НОВЫЙ объект ShoppingCart record
+        return shoppingCart.withPurchases(discountedPurchases);
+    }
+
+    // Или с использованием copy-билдера
+    public ShoppingCart applyDiscountWithBuilder(String customerId, ShoppingCart cart) {
+        Discount discount = discountRepository.findDiscountByCustomerId(customerId)
+                .orElse(new Discount(customerId, 0));
+
+        ShoppingCart.CartBuilder builder = cart.copy();
+
+        for (Purchase purchase : cart.purchases()) {
+            Purchase discounted = purchase.copy()
+                    .finalPrice(discount.applyTo(purchase.originalPrice()))
+                    .build();
+            builder.addPurchase(discounted);
+        }
+
+        return builder.build();
     }
 
     private Purchase applyDiscountToPurchase(Purchase originalPurchase, Discount discount) {
+        BigDecimal discountedPrice = discount.applyTo(originalPurchase.originalPrice());
         // ВАЖНО: не изменяем исходный объект!
-        // Вместо этого создаем новый с примененной скидкой
-        Purchase discountedPurchase = new Purchase(
-                originalPurchase.getProductId(),
-                originalPurchase.getOriginalPrice()
-        );
-
-        BigDecimal discountedPrice = discount.applyTo(originalPurchase.getOriginalPrice());
-        discountedPurchase.setFinalPrice(discountedPrice);
-
-        return discountedPurchase;
+        // Вместо этого создаем новый с примененной скидкой в методе withDiscount
+        return originalPurchase.withDiscount(discountedPrice);
     }
 
     /**
@@ -92,4 +102,6 @@ public class LoyaltyService {
         return shoppingCart.calculateTotalOriginalPrice()
                 .subtract(discountedCart.calculateTotalFinalPrice());
     }
+
+
 }
